--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,11 +11,20 @@
     <div class="overlay"></div>
     <div class="triangle-overlay-yellow"></div>
     <div class="triangle-overlay-blue"></div>
-    <ul id="interiorBackdrop" class="poster-line interior-poster">
-      {% for post in site.categories.movie limit:4 %}
-        <li><img src="{{ post.poster }}"/></li>
-      {% endfor %}
-    </ul>
+
+    {% if page.layout == 'home' %}
+      <ul id="interiorBackdrop" class="poster-line interior-poster">
+        {% for post in site.categories.movie limit:4 %}
+          <li><img src="{{ post.poster }}"/></li>
+        {% endfor %}
+      </ul>
+    {% else %}
+      <ul id="interiorBackdrop" class="poster-line interior-poster">
+        {% for post in site.categories.movie limit:1 %}
+          <img src="{{ post.backdrop }}"/>
+        {% endfor %}
+      </ul>
+    {% endif %}
     <div class="bottom-border">
       <div class="green section"></div><div class="blue section"></div><div class="purple section"></div><div class="orange section"></div><div class="red section"></div>
     </div>
