--- a/_layouts/all.html
+++ b/_layouts/all.html
@@ -10,10 +10,10 @@
   <div class="row">
     <div class="container recent-movies">
       {% include sidebar-navigation.html %}
-      <div class="col-md-8 posters">
+      <div class="col-md-8 posters" id="posterContainer">
         <h2>All Movies</h2>
         {% for post in site.categories.movie %}
-        <div class="col-md-3 poster-container">
+        <div class="col-md-3 poster-container" id="postImage">
           <div class="poster">
             <a class="" href="{{ post.url | prepend: site.baseurl }}">
               <img src="{{ post.poster }}"/>
@@ -39,6 +39,12 @@
       </div>
       {% include sidebar-comingsoon.html %}
     </div>
+    <div class="col-md-8 col-md-offset-1 show-more-container">
+      <div class="show-more" id="showMore">
+        Show More
+      </div>
+    </div>
+
   </div>
 
     {% include footer.html %}
