--- a/_layouts/category_index.html
+++ b/_layouts/category_index.html
@@ -5,7 +5,7 @@ layout: category
 <h2 class="category-title">{{ page.title }}</h2>
 <div class="posts">
 {% for post in site.categories[page.category] %}
-<div class="col-md-3 poster-container">
+<div class="col-md-3 poster-container" id="postImage">
   <div class="poster">
     <a class="" href="{{ post.url | prepend: site.baseurl }}">
       <img src="{{ post.poster }}"/>
