Facebook meta stuff

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,4 +22,12 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+
+  <!-- facebook open graph -->
+  <meta property="og:url" content="http://thismovieyear.com" />
+  <meta property="og:type" content="site" />
+  <meta property="og:title" content="This Movie Year" />
+  <meta property="og:description" content="Movie reviews and ratings, special movie events." />
+  <meta property="og:image" content="/assets/images/fb-og.jpg">
+
 </head>
