--- a/_sass/_globals.scss
+++ b/_sass/_globals.scss
@@ -1,3 +1,38 @@
+#search-container {
+  position: absolute;
+  right: 25px;
+  top: 90px;
+  z-index: 9999;
+
+  input {
+    width: 250px;
+    height: 35px;
+    border-radius: 2px;
+    border: 0;
+    padding: 10px;
+  }
+}
+
+#results-container {
+  .search-poster {
+    height: 200px;
+    object-fit: cover;
+  }
+}
+
+.search-results {
+  .poster-container {
+    h2 {
+      font-weight: 100;
+      font-size: 12px;
+      margin-top: 0px;
+      margin-bottom: 0px;
+      color: $red;
+      font-weight: 500;
+    }  
+  }
+}
+
 .tmy-tooltip {
   background: #fff;
   border: 1px solid #ccc;
