--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,4 +30,10 @@
     </div>
   </div>
 
+  <!-- Html Elements for Search -->
+  <div id="search-container">
+    <input type="text" id="search-input" placeholder="search...">
+    <!-- <ul id="results-container"></ul> -->
+  </div>
+
 </header>
