--- a/_includes/sidebar-navigation.html
+++ b/_includes/sidebar-navigation.html
@@ -4,7 +4,7 @@
     <li class="all"><a href="/all-movies">All</a></li>
     {% for category in site.categories %}
       {% unless category contains 'article' %}
-        <li><a href="{{ site.url }}/{{ category | first | replace: ' ','-' }}" name="{{ category | first }}">{{ category | first }}</a></li>
+        <li><a href="{{ site.url }}/{{ category | first | replace: ' ','-' | downcase }}" name="{{ category | first }}">{{ category | first }}</a></li>
       {% endunless %}
     {% endfor %}
   </ul>
