--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,7 +11,7 @@
     <div class="container recent-movies">
       {% include sidebar-navigation.html %}
       <div class="col-md-8 posters ">
-        <div class="search-results">
+        <div class="col-md-12 search-results">
           <div class="search-title"><h2>Search Results</h2></div>
           <div id="results-container"></div>
         </div>
