--- a/_sass/_globals.scss
+++ b/_sass/_globals.scss
@@ -21,6 +21,8 @@
 }
 
 .search-results {
+  padding-left: 0px;
+  padding-right: 0px;
   .poster-container {
     h2 {
       font-weight: 100;
@@ -29,7 +31,7 @@
       margin-bottom: 0px;
       color: $red;
       font-weight: 500;
-    }  
+    }
   }
 }
 
