--- a/_sass/_globals.scss
+++ b/_sass/_globals.scss
@@ -24,6 +24,8 @@
   padding-left: 0px;
   padding-right: 0px;
   .poster-container {
+    height: 300px;
+    
     h2 {
       font-weight: 100;
       font-size: 12px;
