--- a/_layouts/all.html
+++ b/_layouts/all.html
@@ -11,10 +11,7 @@
     <div class="container recent-movies">
       {% include sidebar-navigation.html %}
       <div class="col-md-8 posters" id="posterContainer">
-        <div class="search-results">
-          <div class="search-title"><h2>Search Results</h2></div>
-          <div id="results-container"></div>
-        </div>
+        {% include search-container.html %}
         <h2>All Movies</h2>
         {% for post in site.categories.movie %}
         <div class="col-md-3 poster-container" id="postImage">
