--- a/_sass/_sidebars.scss
+++ b/_sass/_sidebars.scss
@@ -27,6 +27,14 @@
 
 .coming-soon {
   margin-top: 15px;
+  h2 {
+    font-weight: 100;
+    font-size: 24px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    color: $red;
+    font-weight: 500;
+  }
   h3 {
     text-transform: uppercase;
     font-size: 12px;
