some mobile styling

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,7 +39,7 @@
                 <p class="movie-info">{{ page.overview }}</p>
                   {% for actorsImages_hash in page.actorsImages %}
                     {% for actorsImages in actorsImages_hash %}
-                      <div class="col-md-4">
+                      <div class="col-md-4 actor-images">
                         <div class="actor-image">
                           <img class="actor" src="{{ actorsImages }}"/>
                         </div>
