--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -27,6 +27,10 @@
     color: $orange;
   }
 
+  .actor-images {
+    display: block;
+  }
+
   .actor-details {
     width: 100px;
     height: 100px;
