--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -12,11 +12,15 @@
       {% include sidebar-navigation.html %}
       <div class="col-md-8 posters ">
         {% include search-container.html %}
+        <div class="details" id="detailsContainer"></div>
         <h2>Recent Movies</h2>
         {% for post in site.categories.movie limit:8 %}
         <div class="col-md-3 poster-container">
           <div class="poster">
-            <a class="" href="{{ post.url | prepend: site.baseurl }}">
+            <!-- <a class="" href="{{ post.url | prepend: site.baseurl }}">
+              <img src="{{ post.poster }}"/>
+            </a> -->
+            <a class="" id="movieId" href="#{{ post.id }}">
               <img src="{{ post.poster }}"/>
             </a>
           </div>
