--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -7,6 +7,95 @@
     color: $red;
     font-weight: 500;
   }
+  
+  .details {
+    height: auto;
+    width: 100%;
+    display: none;
+    position: relative;
+    overflow: hidden;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    
+    .close {
+      color: #fff;
+      position: absolute;
+      top: 0px;
+      right: 10px;
+      z-index: 9999;
+      cursor: pointer;
+      font-size: 25px;
+      user-select: none;
+      -webkit-touch-callout: none;
+      -webkit-user-select: none;
+      -khtml-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+    }
+    
+    .selected-content {
+      position: absolute;
+      left: 20px;
+      top: 10px;
+      z-index: 1000;
+    }
+    
+    .actor-block {
+      padding: 0;
+      padding-right: 15px;
+      margin-top: 10px;
+      display: inline-block;
+      vertical-align: top;
+      
+      .actor-image {
+        overflow: hidden;
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        img {
+          margin-top: -15px;
+        } 
+      }
+      
+      .actor-name {
+        color: #fff;
+        text-align: center;
+        width: 100px;
+        display: block;
+        margin: 15px auto;
+      }
+    }
+    
+    .selected-title {
+      font-size: 35px;
+      color: #fff;
+      width: 90%;
+    }
+    
+    .selected-description {
+      color: #fff;
+      font-weight: 100;
+      font-size: 18px;
+      width: 90%;
+    }
+    
+    .overlay {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,.7);
+      z-index: 1000;
+    }
+    
+    .loader {
+      font-size: 50px;
+      text-align: center;
+    }
+  }
 
   .recent-movies {
 
