--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -20,7 +20,7 @@
             <!-- <a class="" href="{{ post.url | prepend: site.baseurl }}">
               <img src="{{ post.poster }}"/>
             </a> -->
-            <a class="" id="movieId" href="#{{ post.id }}">
+            <a class="" id="movieId" href="#{{ post.id }}" data-url="{{ post.url | prepend: site.baseurl }}">
               <img src="{{ post.poster }}"/>
             </a>
           </div>
