--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -85,6 +85,22 @@
       width: 90%;
     }
     
+    .selected-info {
+      display: inline-block;
+      
+      .release {
+        color: $red;
+      }
+    }
+    
+    .popular-vote {
+      margin-left: 10px;
+      display: inline-block;
+      .fa {
+        color: $red;
+      }
+    }
+    
     .selected-description {
       color: #fff;
       font-weight: 100;
@@ -206,11 +222,17 @@
       }
 
       .article-poster {
+        height: 175px;
         padding: 0;
-        height: 200px;
+        display:flex;
+        justify-content:center;
+        align-items:center;
+        overflow:hidden;
+        
         img {
-          height: 200px;
-          object-fit: cover;
+          flex-shrink:0;
+          min-width:100%;
+          min-height:100%;
         }
         a {
           display: inline-block;
@@ -218,7 +240,9 @@
       }
 
       .article-content {
+        padding: 0;
         font-size: 12px;
+        margin-top: 10px;
       }
 
       .score {
