--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -67,6 +67,8 @@
 
   .post-content {
       margin-bottom: $spacing-unit;
+      padding-left: 15px;
+      padding-right: 15px;
 
       h1 {
         margin-bottom: 0px;
