--- a/_layouts/all.html
+++ b/_layouts/all.html
@@ -24,13 +24,13 @@
           <div>{{ post.data }}</div>
           <p class="score">
             {% if post.score == 1 %}
-              <span class="one"><i class="fa fa-star"></i></span>
+              <span class="one"><i class="fa fa-star"></i><i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i></span>
             {% elsif post.score == 2 %}
-              <spany class="two"><i class="fa fa-star"></i> <i class="fa fa-star"></i></span>
+              <spany class="two"><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i></span>
             {% elsif post.score == 3 %}
-              <span class="three"><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></span>
+              <span class="three"><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i></span>
             {% elsif post.score == 4 %}
-              <span class="four"><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></span>
+              <span class="four"><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-o"></i></span>
             {% elsif post.score == 5 %}
               <span class="five"><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></span>
             {% endif %}
