--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,13 +25,13 @@
                 </p>
                 <p class="score">
                   {% if page.score == 1 %}
-                    <span class="one"><i class="fa fa-star"></i></span>
+                    <span class="one"><i class="fa fa-star"></i><i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i></span>
                   {% elsif page.score == 2 %}
-                    <spany class="two"><i class="fa fa-star"></i> <i class="fa fa-star"></i></span>
+                    <spany class="two"><i class="fa fa-star"></i> <i class="fa fa-star"> </i><i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i></span>
                   {% elsif page.score == 3 %}
-                    <span class="three"><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></span>
+                    <span class="three"><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-o"></i> <i class="fa fa-star-o"></i></span>
                   {% elsif page.score == 4 %}
-                    <span class="four"><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></span>
+                    <span class="four"><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star-o"></i></span>
                   {% elsif page.score == 5 %}
                     <span class="five"><i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></span>
                   {% endif %}
