--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -1,11 +1,59 @@
 .site-footer {
-    padding: $spacing-unit 0;
+  padding: 30px 0 0 0;
+  position: relative;
+  overflow: hidden;
+
+  p {
+    font-size: 12px;
+    color: #fff;
+  }
+  
+  .container {
+    position: absolute;
+    z-index: 9999;
+    top: 100px;
+    width: 100%;
+  }
+  
+  .top-movie-posters, .bottom-movie-posters {
+
     position: relative;
     overflow: hidden;
 
-    p {
-      font-size: 12px;
+    .overlay {
+      background: rgba(0,0,0,.7);
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      z-index: 5555;
     }
+
+    ul {
+      margin: 0;
+      padding: 0;
+      display: block;
+      height: 250px;
+      overflow: hidden;
+
+      li {
+
+        width: 25%;
+        height: 150px;
+        display: inline-block;
+        margin: 0;
+        padding: 0;
+        float: left;
+        position: relative;
+
+        img {
+          display: block;
+          max-width: 100%;
+          min-width: 100%;
+          width: 100%;
+        }
+      }
+    }
+  }
 
     .bottom-border{
       height: 5px;
@@ -14,7 +62,7 @@
       bottom: 0;
       z-index: 999999999;
       display: block;
-      margin-bottom: 25px;
+      margin-bottom: 8px;
 
       .section {
         display: inline-block;
@@ -52,6 +100,7 @@
     }
 
     #mc_embed_signup {
+      background: transparent;
 
       form {
         padding: 0;
