dropdown menu for categories sidebar

--- a/_includes/footer-resources.html
+++ b/_includes/footer-resources.html
@@ -1,5 +1,6 @@
 <script>
 {% include js/jquery.min.js %}
+{% include js/bootstrap.min.js %}
 {% include js/main.js %}
 {% include js/themoviedb.js %}
 {% include js/jquery-dateFormat.min.js %}
