--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
           <!-- Begin MailChimp Signup Form -->
           <link href="//cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
           <style type="text/css">
-          	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+          	#mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif; }
           	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
           	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
           </style>
@@ -51,10 +51,22 @@
           <li><img src="{{ post.poster }}"/></li>
         {% endfor %}
       </ul>
+    {% elsif page.layout == 'all' %}
+      <ul id="interiorBackdrop" class="poster-line interior-poster">
+        {% for post in site.categories.movie limit:4 %}
+          <li><img src="{{ post.poster }}"/></li>
+        {% endfor %}
+      </ul>
+    {% elsif page.layout == 'category' %}
+      <ul id="interiorBackdrop" class="poster-line interior-poster">
+        {% for post in site.categories.movie limit:4 %}
+          <li><img src="{{ post.poster }}"/></li>
+        {% endfor %}
+      </ul>
     {% else %}
       <ul id="interiorBackdrop" class="poster-line interior-poster">
         {% for post in site.categories.movie limit:1 %}
-          <img src="{{ post.backdrop }}"/>
+          <img src="{{ page.backdrop }}"/>
         {% endfor %}
       </ul>
     {% endif %}
