--- a/_includes/sidebar-navigation.html
+++ b/_includes/sidebar-navigation.html
@@ -1,12 +1,19 @@
 <div class="col-md-1 categories sidebar-categories">
   <ul id="categoryList">
-    <li class="home breaker"><a href="{{site.url}}">Home</a></li>
-    <li class="all"><a href="/all-movies">All</a></li>
-    {% for category in site.categories %}
-      {% unless category contains 'article' %}
-        <li><a href="{{ site.url }}/{{ category | first | replace: ' ','-' | downcase }}" name="{{ category | first }}">{{ category | first }}</a></li>
-      {% endunless %}
-    {% endfor %}
+    <li class="home"><a href="{{site.url}}">Home</a></li>
+    <div class="dropdown">
+      <button class="dropdown-toggle" type="button" data-toggle="dropdown">
+       Category <span class="caret"></span>
+      </button>
+      <ul class="dropdown-menu">
+       <li class="all"><a href="/all-movies">All</a></li>
+        {% for category in site.categories %}
+          {% unless category contains 'article' %}
+            <li><a href="{{ site.url }}/{{ category | first | replace: ' ','-' | downcase }}" name="{{ category | first }}">{{ category | first }}</a></li>
+          {% endunless %}
+        {% endfor %}
+      </ul>
+    </div>
   </ul>
 
   <!-- TODO: create sorting for years -->
