--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -34,6 +34,10 @@
       display: block;
       height: 250px;
       overflow: hidden;
+      
+      img {
+        margin-top: -100px;
+      }
 
       li {
 
