--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -183,6 +183,10 @@
       display: block;
       height: 150px;
       overflow: hidden;
+      
+      img {
+        margin-top: -100px;
+      }
 
       li {
 
