--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <meta name="description" content="{% if page.layout == 'home' %}{{ site.description }}{% endif %}{% if page.layout == 'all' %}{{ site.description }}{% endif %}{% if page.layout == 'category' %}{{ site.description }}{% endif %}{{ page.overview }}">
 
   <!-- call bootstrap grid before overrides -->
   <style>{% include css/bootstrap.min.css %}</style>
