more preview styling and features

--- a/_includes/footer-resources.html
+++ b/_includes/footer-resources.html
@@ -9,6 +9,8 @@
 {% if page.layout == 'home' %}
   {% include js/home.js %}
   {% include js/vague.js %}
+  {% include js/imagesloaded.pkgd.min.js %}
+  {% include js/jquery-imagefill.js %}
 
   // Script pointing to jekyll-search.js
   {% include js/jekyll-search.js %}
