--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@
   <div class="row">
     <div class="container recent-movies">
       {% include sidebar-navigation.html %}
-      <div class="col-md-8 posters ">
+      <div class="col-md-11 posters ">
         {% include search-container.html %}
         <div class="details" id="detailsContainer"></div>
         <h2>Recent Movies</h2>
@@ -42,7 +42,7 @@
         </div>
         {% endfor %}
       </div>
-      {% include sidebar-comingsoon.html %}
+<!--      {% include sidebar-comingsoon.html %}-->
     </div>
   </div>
   <div class="row">
