--- a/_sass/_globals.scss
+++ b/_sass/_globals.scss
@@ -24,7 +24,7 @@
   padding-left: 0px;
   padding-right: 0px;
   .poster-container {
-    height: 300px;
+    height: 250px !important;
     
     h2 {
       font-weight: 100;
