--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -10,7 +10,6 @@
   
   .details {
     height: auto;
-    width: 700px;
     display: none;
     position: relative;
     overflow: hidden;
@@ -36,6 +35,29 @@
       -khtml-user-select: none;
       -moz-user-select: none;
       -ms-user-select: none;
+    }
+    
+    .selected-poster {
+      padding: 0;
+    }
+    
+    .selected-details {
+      padding: 0;
+      
+      .backdrop-image {
+        width: 100%;
+        height: 500px;
+        overflow: hidden;
+        position: relative;
+        img {
+          position: absolute;
+          top: 0;
+          left: -10%;
+          height: 100%;
+          width: auto;
+          max-width: 200%;
+        }
+      }
     }
     
     .selected-content {
@@ -161,7 +183,7 @@
     .poster-container {
       position: relative;
       margin-top: 15px;
-      height: 300px;
+      height: 400px;
 
       .poster {
         padding: 0;
