--- a/_sass/_sidebars.scss
+++ b/_sass/_sidebars.scss
@@ -1,14 +1,14 @@
 .categories {
-  text-align: right;
+  text-align: left;
   margin-top: 15px;
   padding: 0;
 
   ul {
-    margin-left: 5px;
+    margin-left: 0px;
     li {
       display: block;
       text-transform: uppercase;
-      font-size: 10px;
+      font-weight: 100;
       &:first-child {
         margin-top: 0px;
       }
@@ -27,6 +27,8 @@
     background: none;
     border: none;
     color: $blue;
+    padding: 0;
+    text-transform: uppercase;
   }
   
   .dropdown-menu {
@@ -34,6 +36,7 @@
     
     li a{
       color: $blue;
+      font-weight: 100;
     }
   }
 }
