better navigation dropdown, better responsive preview stuff

--- a/_includes/footer-resources.html
+++ b/_includes/footer-resources.html
@@ -1,10 +1,10 @@
 <script>
 {% include js/jquery.min.js %}
-{% include js/bootstrap.min.js %}
 {% include js/main.js %}
 {% include js/themoviedb.js %}
 {% include js/jquery-dateFormat.min.js %}
 {% include js/lazyload.js %}
+{% include js/navigation.js %}
 
 {% if page.layout == 'home' %}
   {% include js/home.js %}
