--- a/_includes/sidebar-navigation.html
+++ b/_includes/sidebar-navigation.html
@@ -2,8 +2,8 @@
   <ul id="categoryList">
     <li class="home"><a href="{{site.url}}">Home</a></li>
     <div class="dropdown">
-      <button class="dropdown-toggle" type="button" data-toggle="dropdown">
-       Category <span class="caret"></span>
+      <button class="dropdown-toggle" type="button" data-toggle="closed">
+       Category <i class="fa fa-angle-down"></i>
       </button>
       <ul class="dropdown-menu">
        <li class="all"><a href="/all-movies">All</a></li>
